fixed video alignment, changed font colour when on mobile to grey to be seen,added background colour for experimenting

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,13 @@
 body {
     color: #fff;
     font-family: 'Sedgwick Ave', cursive;
-    background-image: url("/assets/images/DiscoLights-image.jpg");
+    background-color: lightsteelblue;
+    /* background-image: url("/assets/images/DiscoLights-image.jpg");
     background-repeat: no-repeat;
-    height: 100%;
-    background-size: contain;
-    z-index: -999;
+    height: 100vh;
+    width: 100vw;
+    background-size: contain; */
+    /* z-index: -999; */
 }
 
 /* Grid system */
@@ -102,7 +104,7 @@ a:active {
 .video-container video {
 	min-width: 100%;
 	min-height: 100%;
-  position: absolute;
+    position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
@@ -162,7 +164,7 @@ a:active {
     padding: 20px;
     margin-bottom: 30px;
     margin-top: 30px;
-    max-width: 50hw;
+    /* width: 80%; */
 }
 
 .question-button {
@@ -172,6 +174,7 @@ a:active {
     border: 2px solid orange;
     border-radius: 6px;
     padding: 20px;
+    width: 80%;
     cursor: pointer;
 }
 
@@ -226,7 +229,7 @@ footer {
    
 }
 
-/*Social networks decoration*/
+/*Social networks links decoration*/
 .social-networks {
     text-align: center;
     font-size: 300%;
@@ -278,6 +281,12 @@ a:active i::before {
     .showcase .video-container {
       display: none;      
     }
+
+    .dark-font {
+        color: #666;
+        font-size: 70%;
+    }
+    
 }
 
 @media only screen and (min-width: 640px) and (max-width: 1023px) {
